loleaflet/css/toolbar.css
/* ... */
.w2ui-overlay {
	-webkit-box-shadow: 0 0 3px var(--color-border);
	box-shadow: 0 0 3px var(--color-box-shadow);
	border-radius: var(--border-radius);
	background-color: var(--color-background-lighter);
}
.w2ui-overlay.bottom-arrow:before {
	border-top: 6px solid var(--color-border-dark);
}
.w2ui-overlay .menu {
	overflow: hidden auto;
	border-radius: var(--border-radius);
}
.w2ui-overlay > div {
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
}
.w2ui-overlay table.w2ui-drop-menu {
	color: var(--color-main-text);
	background-color: var(--color-main-background);
}
.w2ui-overlay table.w2ui-drop-menu tr:hover {
	color: var(--color-text-darker);
	background-color: var(--color-background-darker);
}
.w2ui-overlay.bottom-arrow:after {
	border-top-color: var(--color-background-lighter);
}
#tb_actionbar_item_LanguageStatus .w2ui-button.checked .w2ui-tb-down > div,
#tb_actionbar_item_StateTableCellMenu .w2ui-button.checked .w2ui-tb-down > div,
#tb_actionbar_item_zoom .w2ui-button.checked .w2ui-tb-down > div {
	border-color: transparent;
	border-bottom: 5px solid var(--color-text-dark);
	margin-top: -5px;
}
#spreadsheet-toolbar {
	width: 100%;
	text-align: center;
	padding: 0;
	background-color: var(--color-main-background);
	border-top: 1px solid var(--color-border);
}

#formulabar {
	border-top: 1px solid var(--color-border);
	height: 30px;
}

#tb_formulabar_item_address,
#tb_formulabar_item_item_2,
#tb_formulabar_item_functiondialog,
#tb_formulabar_item_sum,
#tb_formulabar_item_function,
#tb_formulabar_item_cancelformula,
#tb_formulabar_item_acceptformula {
	padding-top: 2px;
	vertical-align: top;
}

#presentation-toolbar {
	bottom: 0;
	background-color: var(--color-main-background);
	text-align: center;
	position: absolute;
	z-index: 500;
	width: 100%;
	padding-bottom: 0px;
	margin-top: -1px;
	border-bottom: none;
	box-sizing: border-box;
}

.w2ui-toolbar .w2ui-break {
	height: 18px;
	background-image: none;
	background-color: var(--color-border-lighter);
}

/* For MS Edge 40, the select2 combo boxes need to have higher z-index than #map
 * Ideal would be to add the class to select2-container <span>, but
 * https://github.com/select2/select2/issues/285
 * So, for now just define the z-index here separately for the same class that select2 uses
 * as a container
 */
.select2-container {
	/* z-index: 1000; */
}

.select2-container .select2-selection--single {
	height: 100%;
}

.w2ui-scroll-left,
.w2ui-scroll-right {
	/* z-index: 1001; */
}

/* center the toolbar */
#tb_presentation-toolbar_item_left {
	width: 50%;
}

#addressInput {
	height: 24px;
	width: 100px;
}

#formulaInput {
	height: 24px;
	width: 100%;
}

#calc-inputbar-wrapper {
	display: block;
	border: none;
}

#calc-inputbar {
	display: block;
	width: 100%;
	position: relative;
	padding: 0px;
	margin: 0px;
}

#tb_formulabar_item_formula {
	width: 100%;
}

#tb_formulabar_item_formula div table {
	width: 100%;
}

@keyframes textPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.1);
	}
}
@keyframes presentationPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.1);
	}
}
@keyframes spreadsheetPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.1);
	}
}
.text-color-indicator #document-name-input.editable:focus{
	animation: textPulse 1.5s infinite ease-in-out;
}
.presentation-color-indicator #document-name-input.editable:focus{
	animation: presentationPulse 1.5s infinite ease-in-out;
}
.spreadsheet-color-indicator #document-name-input.editable:focus{
	animation: spreadsheetPulse 1.5s infinite ease-in-out;
}

#document-name-input {
	color: var(--color-text-darker);
	font-size: var(--header-font-size);
	border: 1px solid transparent;
	background-color: transparent;
	border-radius: var(--border-radius);
	padding: 0px 2px;
	transition: 0.5s;
}

#document-name-input.editable {
	border: none;
	max-width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	height: 18px;
	text-align: center;
	font-size: var(--default-font-size) !important;
	padding: 0px 4px;
	width: auto !important;
	border-radius: 20px;
	box-shadow: inset 0 0 2px 0 var(--color-border-dark);
	background-color: var(--color-background-lighter);
}

#document-name-input:disabled {
	border: 1px solid #fff;
	color: var(--doc-identify-color);
	border-radius: 5px;
	font-size: 13px !important;
	background-color: white;
}

.main-nav:not(.hasnotebookbar) #document-name-input.editable {
	font-size: var(--default-font-size) !important;
	padding-bottom: 2px;
}

#document-name-input.editable:focus {
	border: none;
	box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb;
	background-color: var(--color-main-background);
	background-image: none;
	outline: none;
	flex: 2;
	text-align: left;
}

.readonly #document-name-input.editable:focus {
	flex: 1;
	text-align: center;
}

#document-name-input.editable:hover:not(:focus) {
	border: none;
	box-shadow: 0 0 0.1px 1px #d7d7d7, 0 0 3px 2px #f0f0f0;
	background-color: var(--color-main-background);
	background-position: right;
	background-repeat: no-repeat;
}
/* ... */

